# thomson

./: CHANGELOG.md  Cargo.toml  README.md  settings.json  settings.toml
conf/: etc.toml  rules.json  settings.toml
examples/: vscode.bash
examples/vscode/: vscode.sh
examples/vscode/conf/: etc.toml  output.json  settings.json  settings.toml
examples/vscode/conf/extension/: vim.toml
src/: collect.rs  context.rs  driver.rs  io.rs  lib.rs  main.rs  rule.rs  transform.rs
src/component/: context.rs  driver.rs  mod.rs  path.rs  rule.rs
