[package]
name = "thomson"
version = "0.2.4"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
anyhow = "1.0.93"
thiserror = "2.0.3"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
log = "0.4.22"
env_logger = "0.11.5"
